--- a/html/overview.html
+++ b/html/overview.html
@@ -14,6 +14,7 @@
         <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script> <!-- DataTable -->
         <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script> <!-- DataTable -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/alasql/0.4.5/alasql.min.js"></script> <!-- alasql -->
+        <script src="https://www.gstatic.com/charts/loader.js"></script> <!-- GoogleChart -->      
 		<script src="js/overview.js"></script> <!-- alles eigene -->
 
 		<!-- CSS -->
@@ -38,7 +39,10 @@
             <noscript>Please activate JavaScript</noscript>
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a id="TabPlayer" class="nav-link active show" data-toggle="tab" href="#ContentPlayer"> <i class="fas fa-user"></i> Player</a>
+                    <a id="TabPlayer" class="nav-link active show" data-toggle="tab" href="#ContentPlayer"><i class="fas fa-user"></i> Player</a>
+                </li>
+                <li class="nav-item">
+                    <a id="TabPlayerBase" class="nav-link" data-toggle="tab" href="#ContentPlayerBase"><i class="fas fa-home"></i> Player - Bases</a>
                 </li>
                 <li class="nav-item">
                     <a id="TabAllianceMembers" class="nav-link" data-toggle="tab" href="#ContentAllianceMembers"><i class="fas fa-users"></i> Members</a>
@@ -47,7 +51,10 @@
                     <a id="TabAlliance" class="nav-link" data-toggle="tab" href="#ContentAlliance"><i class="fas fa-chart-line"></i> Alliance</a>
                 </li>
                 <li class="nav-item">
-                    <a id="TabBases" class="nav-link" data-toggle="tab" href="#ContentBases"><i class="fas fa-home"></i> Bases</a>
+                    <a id="TabAllianceBase" class="nav-link" data-toggle="tab" href="#ContentAllianceBase"><i class="fas fa-home"></i> Alliance - Bases</a>
+                </li>
+                <li class="nav-item">
+                    <a id="TabBase" class="nav-link" data-toggle="tab" href="#ContentBase"><i class="fas fa-home"></i> Base</a>
                 </li>
                 <li id="LiTabWorld" class="nav-item d-none">
                     <a id="TabWorld" class="nav-link" data-toggle="tab" href="#ContentWorld"><i class="fas fa-globe"></i> World</a>
@@ -55,13 +62,13 @@
             </ul><br/>
             <div class="row">
                 <div id="DivDropDownListWorld" class="col-md-3 form-group">
-                    <select class="form-control" id="DropDownListWorld" onchange="prepareandFillDropDownListDataAlliance();"></select>
+                    <select class="form-control" id="DropDownListWorld"></select>
                 </div>
                 <div id="DivDropDownListAlliance" class="col-md-3 form-group">
-                    <select class="form-control" id="DropDownListAlliance" onchange="prepareandFillDropDownListDataPlayer();"></select>
+                    <select class="form-control" id="DropDownListAlliance"></select>
                 </div>
                 <div id="DivDropDownListPlayer" class="col-md-3 form-group">
-                    <select class="form-control" id="DropDownListPlayer" onchange="prepareandFillDropDownListDataBase();"></select>
+                    <select class="form-control" id="DropDownListPlayer"></select>
                 </div>
                 <div id="DivDropDownListBase" class="col-md-3 form-group d-none">
                     <select class="form-control" id="DropDownListBase"></select>
@@ -70,6 +77,14 @@
             <div class="tab-content"><br/>
                 <div id="ContentPlayer" class="tab-pane active show">
                     Player
+                </div>
+                <div id="ContentPlayerBase" class="tab-pane">
+                    <table id="TablePlayerBase" class="table table-striped table-bordered table-hover">
+                        <thead>
+                            <tr id="TablePlayerBaseTheadTr"></tr>
+                        </thead>
+                        <tbody id="TablePlayerBaseTbody"></tbody>
+                    </table>
                 </div>
                 <div id="ContentAllianceMembers" class="tab-pane">
                     <table id="TableAlliancePlayer" class="table table-striped table-bordered table-hover">
@@ -80,10 +95,19 @@
                     </table>
                 </div>
                 <div id="ContentAlliance" class="tab-pane">
-                    Alliance
+                    <div id="GoogleChartLineAllianceRank" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartLineAlliancePoints" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartLineAllianceBonus - Ressoucen" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartLineAllianceBonus - Fight" class="divGoogleChart"></div><br/>
                 </div>
-                <div id="ContentBases" class="tab-pane">
-                    Bases
+                <div id="ContentAllianceBase" class="tab-pane">
+                    Alliance - Bases
+                </div>
+                <div id="ContentBase" class="tab-pane">
+                    <h5 class="text-center"><a href="" target="_blank" id="LinkCncOpt">CnCOpt</a></h5>
+                    <div id="GoogleChartLineBase - Production" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartLineBase - Values" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartLineBase - RepairTime" class="divGoogleChart"></div><br/>
                 </div>
                 <div id="ContentWorld" class="tab-pane">
                     World
