--- a/html/overview.html
+++ b/html/overview.html
@@ -76,7 +76,7 @@
             </div>
             <div class="tab-content"><br/>
                 <div id="ContentPlayer" class="tab-pane active show">
-                    Player
+                    <div id="GoogleChartLinePlayer - ScorePoints" class="divGoogleChart"></div><br/>
                 </div>
                 <div id="ContentPlayerBase" class="tab-pane">
                     <table id="TablePlayerBase" class="table table-striped table-bordered table-hover">
