optic -> finished diagrams player

--- a/html/overview.html
+++ b/html/overview.html
@@ -77,6 +77,15 @@
             <div class="tab-content"><br/>
                 <div id="ContentPlayer" class="tab-pane active show">
                     <div id="GoogleChartLinePlayer - ScorePoints" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartLinePlayer - Ranking" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartLinePlayer - Production" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartLinePlayer - RPs / Credits" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartLinePlayer - Shoots" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartLinePlayer - Values" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartLinePlayer - VPs" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartLinePlayer - LPs" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartLinePlayer - CPs" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartLinePlayer - Funds" class="divGoogleChart"></div><br/>
                 </div>
                 <div id="ContentPlayerBase" class="tab-pane">
                     <table id="TablePlayerBase" class="table table-striped table-bordered table-hover">
