BugFix: linkToRoot, first public version for basic-tests

--- a/html/overview.html
+++ b/html/overview.html
@@ -35,43 +35,45 @@
                 </form>
             </div>
         </div>
-        <div class="jumbotron own-jumbotron-div-content">
+        <div class="jumbotron own-jumbotron-bgcolor">
             <noscript>Please activate JavaScript</noscript>
-            <ul class="nav nav-tabs">
-                <li class="nav-item">
-                    <a id="TabPlayer" class="nav-link active show" data-toggle="tab" href="#ContentPlayer"><i class="fas fa-user"></i> Player</a>
-                </li>
-                <li class="nav-item">
-                    <a id="TabPlayerBase" class="nav-link" data-toggle="tab" href="#ContentPlayerBase"><i class="fas fa-home"></i> Player - Bases</a>
-                </li>
-                <li class="nav-item">
-                    <a id="TabAllianceMembers" class="nav-link" data-toggle="tab" href="#ContentAllianceMembers"><i class="fas fa-users"></i> Members</a>
-                </li>
-                <li class="nav-item">
-                    <a id="TabAlliance" class="nav-link" data-toggle="tab" href="#ContentAlliance"><i class="fas fa-chart-line"></i> Alliance</a>
-                </li>
-                <li class="nav-item">
-                    <a id="TabAllianceBase" class="nav-link" data-toggle="tab" href="#ContentAllianceBase"><i class="fas fa-home"></i> Alliance - Bases</a>
-                </li>
-                <li class="nav-item">
-                    <a id="TabBase" class="nav-link" data-toggle="tab" href="#ContentBase"><i class="fas fa-home"></i> Base</a>
-                </li>
-                <li id="LiTabWorld" class="nav-item d-none">
-                    <a id="TabWorld" class="nav-link" data-toggle="tab" href="#ContentWorld"><i class="fas fa-globe"></i> World</a>
-                </li>
-            </ul><br/>
-            <div class="row">
-                <div id="DivDropDownListWorld" class="col-md-3 form-group">
-                    <select class="form-control" id="DropDownListWorld"></select>
-                </div>
-                <div id="DivDropDownListAlliance" class="col-md-3 form-group">
-                    <select class="form-control" id="DropDownListAlliance"></select>
-                </div>
-                <div id="DivDropDownListPlayer" class="col-md-3 form-group">
-                    <select class="form-control" id="DropDownListPlayer"></select>
-                </div>
-                <div id="DivDropDownListBase" class="col-md-3 form-group d-none">
-                    <select class="form-control" id="DropDownListBase"></select>
+            <div class="sticky-top own-jumbotron-bgcolor">
+                <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                        <a id="TabPlayer" class="nav-link active show" data-toggle="tab" href="#ContentPlayer"><i class="fas fa-user"></i> Player</a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="TabPlayerBase" class="nav-link" data-toggle="tab" href="#ContentPlayerBase"><i class="fas fa-home"></i> Player - Bases</a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="TabAllianceMembers" class="nav-link" data-toggle="tab" href="#ContentAllianceMembers"><i class="fas fa-users"></i> Members</a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="TabAlliance" class="nav-link" data-toggle="tab" href="#ContentAlliance"><i class="fas fa-chart-line"></i> Alliance</a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="TabAllianceBase" class="nav-link" data-toggle="tab" href="#ContentAllianceBase"><i class="fas fa-home"></i> Alliance - Bases</a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="TabBase" class="nav-link" data-toggle="tab" href="#ContentBase"><i class="fas fa-home"></i> Base</a>
+                    </li>
+                    <li id="LiTabWorld" class="nav-item d-none">
+                        <a id="TabWorld" class="nav-link" data-toggle="tab" href="#ContentWorld"><i class="fas fa-globe"></i> World</a>
+                    </li>
+                </ul><br/>
+                <div class="row">
+                    <div id="DivDropDownListWorld" class="col-md-3 form-group">
+                        <select class="form-control" id="DropDownListWorld"></select>
+                    </div>
+                    <div id="DivDropDownListAlliance" class="col-md-3 form-group">
+                        <select class="form-control" id="DropDownListAlliance"></select>
+                    </div>
+                    <div id="DivDropDownListPlayer" class="col-md-3 form-group">
+                        <select class="form-control" id="DropDownListPlayer"></select>
+                    </div>
+                    <div id="DivDropDownListBase" class="col-md-3 form-group d-none">
+                        <select class="form-control" id="DropDownListBase"></select>
+                    </div>
                 </div>
             </div>
             <div class="tab-content"><br/>
