--- a/html/overview.html
+++ b/html/overview.html
@@ -112,7 +112,7 @@
                     <div id="GoogleChartLineAllianceBonus - Fight" class="divGoogleChart"></div><br/>
                 </div>
                 <div id="ContentAllianceBase" class="tab-pane">
-                    Alliance - Bases
+                    <div id="GoogleChartColumnAlliance - Offense" class="divGoogleChart"></div><br/>
                 </div>
                 <div id="ContentBase" class="tab-pane">
                     <h5 class="text-center"><a href="" target="_blank" id="LinkCncOpt">CnCOpt</a></h5>
