--- a/html/overview.html
+++ b/html/overview.html
@@ -57,8 +57,8 @@
                     <li class="nav-item">
                         <a id="TabBase" class="nav-link" data-toggle="tab" href="#ContentBase"><i class="fas fa-home"></i> Base</a>
                     </li>
-                    <li id="LiTabWorld" class="nav-item d-none">
-                        <a id="TabWorld" class="nav-link" data-toggle="tab" href="#ContentWorld"><i class="fas fa-globe"></i> World</a>
+                    <li id="LiTabWorldBase" class="nav-item d-none">
+                        <a id="TabWorldBase" class="nav-link" data-toggle="tab" href="#ContentWorldBase"><i class="fas fa-globe"></i> World</a>
                     </li>
                 </ul><br/>
                 <div class="row">
@@ -120,8 +120,8 @@
                     <div id="GoogleChartLineBase - Values" class="divGoogleChart"></div><br/>
                     <div id="GoogleChartLineBase - RepairTime" class="divGoogleChart"></div><br/>
                 </div>
-                <div id="ContentWorld" class="tab-pane">
-                    World
+                <div id="ContentWorldBase" class="tab-pane">
+                    <div id="GoogleChartColumnWorld - Offense" class="divGoogleChart"></div><br/>
                 </div>
             </div>
         </div>
