renamed tabs for better overview

--- a/html/overview.html
+++ b/html/overview.html
@@ -43,7 +43,7 @@
                         <a id="TabPlayer" class="nav-link active show" data-toggle="tab" href="#ContentPlayer"><i class="fas fa-user"></i> Player</a>
                     </li>
                     <li class="nav-item">
-                        <a id="TabPlayerBase" class="nav-link" data-toggle="tab" href="#ContentPlayerBase"><i class="fas fa-home"></i> Player - Bases</a>
+                        <a id="TabPlayerBase" class="nav-link" data-toggle="tab" href="#ContentPlayerBase"><i class="fas fa-street-view"></i> Player - Bases</a>
                     </li>
                     <li class="nav-item">
                         <a id="TabAllianceMembers" class="nav-link" data-toggle="tab" href="#ContentAllianceMembers"><i class="fas fa-users"></i> Members</a>
@@ -52,13 +52,13 @@
                         <a id="TabAlliance" class="nav-link" data-toggle="tab" href="#ContentAlliance"><i class="fas fa-chart-line"></i> Alliance</a>
                     </li>
                     <li class="nav-item">
-                        <a id="TabAllianceBase" class="nav-link" data-toggle="tab" href="#ContentAllianceBase"><i class="fas fa-home"></i> Alliance - Bases</a>
+                        <a id="TabAllianceOverview" class="nav-link" data-toggle="tab" href="#ContentAllianceOverview"><i class="fas fa-eye"></i> Alliance - Overview</a>
                     </li>
                     <li class="nav-item">
                         <a id="TabBase" class="nav-link" data-toggle="tab" href="#ContentBase"><i class="fas fa-home"></i> Base</a>
                     </li>
-                    <li id="LiTabWorldBase" class="nav-item d-none">
-                        <a id="TabWorldBase" class="nav-link" data-toggle="tab" href="#ContentWorldBase"><i class="fas fa-globe"></i> World</a>
+                    <li id="LiTabWorldOverview" class="nav-item d-none">
+                        <a id="TabWorldOverview" class="nav-link" data-toggle="tab" href="#ContentWorldOverview"><i class="fas fa-globe"></i> World - Overview</a>
                     </li>
                 </ul><br/>
                 <div class="row">
@@ -111,7 +111,7 @@
                     <div id="GoogleChartLineAllianceBonus - Ressoucen" class="divGoogleChart"></div><br/>
                     <div id="GoogleChartLineAllianceBonus - Fight" class="divGoogleChart"></div><br/>
                 </div>
-                <div id="ContentAllianceBase" class="tab-pane">
+                <div id="ContentAllianceOverview" class="tab-pane">
                     <div id="GoogleChartColumnAlliance - Offense" class="divGoogleChart"></div><br/>
                 </div>
                 <div id="ContentBase" class="tab-pane">
@@ -120,7 +120,7 @@
                     <div id="GoogleChartLineBase - Values" class="divGoogleChart"></div><br/>
                     <div id="GoogleChartLineBase - RepairTime" class="divGoogleChart"></div><br/>
                 </div>
-                <div id="ContentWorldBase" class="tab-pane">
+                <div id="ContentWorldOverview" class="tab-pane">
                     <div id="GoogleChartColumnWorld - Offense" class="divGoogleChart"></div><br/>
                 </div>
             </div>
