--- a/html/overview.html
+++ b/html/overview.html
@@ -151,14 +151,13 @@
                                     </div>
                                     <div class="form-group">
                                         <button type="reset" class="btn btn-danger" id="ButtonCancelChangePassword"><i class="fas fa-times"></i> Cancel</button>
-                                        <button type="submit" class="btn btn-success float-right" id="ButtonConfirmhangePassword"><i class="fas fa-check"></i> Confirm</button>
+                                        &nbsp;&nbsp;&nbsp;<button type="submit" class="btn btn-success float-right" id="ButtonConfirmhangePassword"><i class="fas fa-check"></i> Confirm</button>
                                     </div>
                                 </form>
                                 <div id="AdminButtonsPlayer" class="d-none">
+                                    <h3>Admin-Settings</h3>
                                     <div class="form-group">
                                         <button id="ButtonResetPlayer" class="btn btn-warning"><i class="fas fa-sync"></i> reset Player</button>
-                                    </div>
-                                    <div class="form-group">
                                         <button id="ButtonDeletePlayer" class="btn btn-danger"><i class="fas fa-user-times"></i> delete Player</button>
                                     </div>
                                 </div>
@@ -168,6 +167,7 @@
                             </div>
                             <div class="tab-pane fade" id="v-pills-server" role="tabpanel" aria-labelledby="v-pills-server-tab">
                                 <button id="ButtonOptimizeAllTables" class="btn btn-primary"><i class="fas fa-table"></i> optimize all tables</button>
+                                &nbsp;&nbsp;&nbsp;<button id="ButtonDeleteServer" class="btn btn-danger"><i class="fas fa-times"></i> delete server</button>
                                 <br/><br/><i id="LoadingSymbol" class="fas fa-sync fa-spin fa-6x d-none"></i>
                             </div>
                         </div>
