settings -> finished player

--- a/html/login.html
+++ b/html/login.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="jumbotron own-jumbotron-div-content">
                 <noscript>Please activate JavaScript</noscript>
-                <form method="post" action="" id="FormLogin" onsubmit="return login();">
+                <form method="post" action="" id="FormLogin">
                     <div class="form-group">
                         <div class="input-group">
                             <input class="form-control" id="UserName" name="UserName" placeholder="Username" required autofocus />
