--- a/html/overview.html
+++ b/html/overview.html
@@ -130,7 +130,7 @@
                     <div class="row">
                         <div class="col-md-3 nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                             <a class="nav-link active" id="v-pills-player-tab" data-toggle="pill" href="#v-pills-player" role="tab" aria-controls="v-pills-player" aria-selected="true">Player</a>
-                            <a class="nav-link" id="v-pills-alliance-tab" data-toggle="pill" href="#v-pills-alliance" role="tab" aria-controls="v-pills-alliance" aria-selected="false">Alliance</a>
+                            <a class="nav-link d-none" id="v-pills-alliance-tab" data-toggle="pill" href="#v-pills-alliance" role="tab" aria-controls="v-pills-alliance" aria-selected="false">Alliance</a>
                             <a class="nav-link d-none" id="v-pills-server-tab" data-toggle="pill" href="#v-pills-server" role="tab" aria-controls="v-pills-server" aria-selected="false">Server</a>
                         </div>
                         <div class="col-md-9 tab-content" id="v-pills-tabContent">
@@ -169,7 +169,27 @@
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="v-pills-alliance" role="tabpanel" aria-labelledby="v-pills-alliance-tab">
-                                who sees other member in alliance?
+                                <h3>Alliance-Settings</h3>
+                                <h6>Needed MemberRole to view other AllianceMember:</h6>
+                                <div class="form-group">
+                                    <select id="DropDownListMemberRole" class="form-control">
+                                        <option value="1">Commander-in-chief</option>
+                                        <option value="2">Second Commander</option>
+                                        <option value="3">Officer</option>
+                                        <option value="4">Veteran</option>
+                                        <option value="5">Member</option>
+                                        <option value="6">Trial</option>
+                                        <option value="7">Inactive</option>
+                                    </select>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md form-group">
+                                        <button id="ButtonCancelChangeNeededMemberRole" class="btn btn-danger btn-block"><i class="fas fa-times"></i> Cancel</button>
+                                    </div>
+                                    <div class="col-md form-group">
+                                        <button id="ButtonSaveChangeNeededMemberRole" class="btn btn-success btn-block"><i class="fas fa-check"></i> Save</button>
+                                    </div>
+                                </div>
                             </div>
                             <div class="tab-pane fade" id="v-pills-server" role="tabpanel" aria-labelledby="v-pills-server-tab">
                                 <button id="ButtonOptimizeAllTables" class="btn btn-primary"><i class="fas fa-table"></i> optimize all tables</button>
