--- a/html/overview.html
+++ b/html/overview.html
@@ -193,6 +193,12 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="card-footer alert alert-danger d-none" id="MemberRoleChangeFail">
+                                        <b>Error!</b> The MemberRole was not successfully changed
+                                    </div>
+                                    <div class="card-footer alert alert-success d-none" id="MemberRoleChangeSuccess">
+                                        <b>Success!</b> You changed the needed MemberRole
+                                    </div>
                                 </div>
                                 <div class="card form-group">
                                     <div class="card-header">Member in alliance</div>
