--- a/html/login.html
+++ b/html/login.html
@@ -46,8 +46,147 @@
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-success"><span class="fas fa-sign-in-alt"></span> Login</button>
+                        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#ModalScriptDownload"><span class="fas fa-download"></span> Script</button>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalScriptDownload"><span class="fas fa-question-circle"></span> Help / Information</button>
+                        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#ModalContact"><span class="fas fa-envelope"></span> Contact</button>
                     </div>
                 </form>
+            </div>
+        </div>
+        <div class="modal fade" id="ModalScriptDownload">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Information & Download</h5>
+                        <button class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-lg">
+                                <h2>Englisch</h2>
+                            </div>
+                            <div class="col-lg">
+                                <h2>Deutsch</h2>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">Script installieren</h4>
+                                        <p class="list-group-item-text">Um das Script zu installieren müssen alle Informationen durchgelesen und akzeptiert werden. Erst durch die Bestätigung in Form des Anhakens der Checkbox (siehe unten) wird der Download freigegeben.</p>
+                                    </div>
+                                </div>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">Login erhalten</h4>
+                                        <p class="list-group-item-text">Sobald das Script auf einer Welt aktiv ist, wird im InGame-Chat Benutzername und Passwort angezeigt, sofern sich der Account <b>nicht</b> in einer UV befindet und das Passwort noch nicht geändert wurde. Man kann auf den blauen Link im InGame-Chat klicken und sich dort mit diesem personalisieren Login kann man sich einloggen.</p>
+                                    </div>
+                                </div>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">Automatische Übermittlung</h4>
+                                        <p class="list-group-item-text">Ist das Script einmal aktiv, sind keine weiteren Tätigkeiten notwendig. Beim Einloggen in die Welt oder 1x pro Stunde werden die Werte automatisch übertragen.</p>
+                                    </div>
+                                </div>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">Auf welchen Welten werden die Werte übertragen?</h4>
+                                        <p class="list-group-item-text">Hier gibt es eine einfache Antwort: Von Haus aus auf allen. Jedoch könnt ihr die include-Angaben auf eure Wünsche zugeschnitten anpassen.</p>
+                                    </div>
+                                </div>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">Wer hat Zugriff auf euren Account?</h4>
+                                        <p class="list-group-item-text">Nur ihr habt Zugriff - sonst wäre der Login nutzlos, nicht wahr? :D</p>
+                                    </div>
+                                </div>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">Ist das ganze hier sicher?</h4>
+                                        <p class="list-group-item-text">Grob gesagt: Meiner Ansicht nach schon.<br/>Um an die Auswertung anderer Spieler / Allianzen zu kommen, müsst ihr an die Datenbank rankommen - ich wünsche viel Gelingen. Wer es schafft, nimmt bitte zu mir Kontakt auf - ich verleihe dann höstpersönlich einen Orden.</p>
+                                    </div>
+                                </div>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">Wo liegen die übermittelten Werte?</h4>
+                                        <p class="list-group-item-text">Die Werte sind in einer Datenbank gespeichert, wo ausschließlich der Hoster und ich Zugriff haben - kein anderer. Theoretisch kann ich eure übermittelten Werte sehen und eure Accounts ausspionieren - aber ganz ehrlich: Da habe ich Besseres zu tun. ;)</p>
+                                    </div>
+                                </div>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">Welche Werte werden ausgelesen?</h4>
+                                        <p class="list-group-item-text">
+                                            <ul><b>Spieler</b>
+                                                <li>AccountId (zur eindeutigen Identifizierung)</li>
+                                                <li>Spielername</li>
+                                                <li>Punkte</li>
+                                                <li>Anzahl Basen</li>
+                                                <li>Anzahl Supports</li>
+                                                <li>Rang</li>
+                                                <li>EventRang (betrifft Veteranen-Server)</li>
+                                                <li>Status in der Allianz (OBH, Offi, Member, etc.)</li>
+                                                <li>Produktionen (Tiberium, Kristall, Strom, Credits)</li>
+                                                <li>aktuelle Forschungspunkte, Credits</li>
+                                                <li>geschossene PvP- und PvE-Basen</li>
+                                                <li>Veteran- und Legaly-Punkte (betrifft Veteranen-Server)</li>
+                                                <li>KPs (Speicher und aktuell)</li>
+                                                <li>Repzeit-Speicher</li>
+                                                <li>eingehende, ausgehende UV's</li>
+                                                <li>Funds</li>
+                                            </ul>
+                                            <ul><b>Basen</b>
+                                                <li>BasisId (zur eindeutigen Identifizierung)</li>
+                                                <li>Basisname</li>
+                                                <li>Produktionen (Tiberium, Kristall, Strom, Credits)</li>
+                                                <li>Basenwerte (Basenlevel, Defensivlevel, Offensivlevel, Support-Level und -Art)</li>
+                                                <li>CnC-Opts der Basen</li>
+                                                <li>aktuelle Reparaturzeit in der Basis</li>
+                                            </ul>
+                                            <ul><b>Allianz</b>
+                                                <li>AllianzId (zur eindeutigen Identifizierung)</li>
+                                                <li>Allianzname</li>
+                                                <li>Rang</li>
+                                                <li>EventRang (betrifft Veteranen-Server)</li>
+                                                <li>Veteranen-Punkte (betrifft Veteranen-Server)</li>
+                                                <li>Veteranen-Punkte pro Stunde (betrifft Veteranen-Server)</li>
+                                                <li>Allianz-Boni (Ressourcen, Prozente, Punkte und Rang)</li>
+                                            </ul>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input class="form-check-input" id="CheckBoxDownloadScript" type="checkbox"><div>I read and accept the information above / Ich habe die obigen Informationen gelesen und verstanden</div>
+                            </label>
+                        </div>
+                        <button class="btn btn-primary" id="ButtonDownloadScript" disabled><i class="fas fa-download"></i> Download</button>
+                        <button class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-times"></i> Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="ModalContact">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Modal title</h5>
+                        <button class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row form-group">
+                            <div class="col-md-3">Email:</div>
+                            <div class="col-md"><a href="mailto:cc.ta.leo7044@gmail.com?subject=leoStats%20-%20Contact">cc.ta.leo7044@gmail.com</a></div>
+                        </div>
+                        <div class="row form-group">
+                            <div class="col-md-3">NickName:</div>
+                            <div class="col-md">leo7044</div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-times"></i> Close</button>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
