--- a/html/login.html
+++ b/html/login.html
@@ -70,7 +70,7 @@
                                 <div class="list-group">
                                     <div class="list-group-item">
                                         <h4 class="list-group-item-heading">Script installieren</h4>
-                                        <p class="list-group-item-text">Um das Script zu installieren müssen alle Informationen durchgelesen und akzeptiert werden. Erst durch die Bestätigung in Form des Anhakens der Checkbox (siehe unten) wird der Download freigegeben.</p>
+                                        <p class="list-group-item-text">Um das Script zu installieren müssen alle Informationen durchgelesen und akzeptiert werden. Erst durch die Bestätigung in Form des Anhakens der Checkbox (siehe unten) wird der Download freigegeben. Grundvoraussetzung für die Installation sowohl in Google Chrome als auch in Firefox ist Tampermonkey.</p>
                                     </div>
                                 </div>
                                 <div class="list-group">
