--- a/html/login.html
+++ b/html/login.html
@@ -157,7 +157,7 @@
                     <div class="modal-footer">
                         <div class="form-check">
                             <label class="form-check-label">
-                                <input class="form-check-input" id="CheckBoxDownloadScript" type="checkbox"><div>I read and accept the information above / Ich habe die obigen Informationen gelesen und verstanden</div>
+                                <input class="form-check-input" id="CheckBoxDownloadScript" type="checkbox"><div>I read and accept the information above / Ich habe die obigen Informationen gelesen und verstanden und ich akzeptiere sie.</div>
                             </label>
                         </div>
                         <button class="btn btn-primary" id="ButtonDownloadScript" disabled><i class="fas fa-download"></i> Download</button>
