--- a/html/overview.html
+++ b/html/overview.html
@@ -212,7 +212,19 @@
                             <div class="tab-pane fade" id="v-pills-server" role="tabpanel" aria-labelledby="v-pills-server-tab">
                                 <button id="ButtonOptimizeAllTables" class="btn btn-primary"><i class="fas fa-table"></i> optimize all tables</button>
                                 &nbsp;&nbsp;&nbsp;<button id="ButtonDeleteServer" class="btn btn-danger"><i class="fas fa-times"></i> delete server</button>
-                                <br/><br/><i id="LoadingSymbol" class="fas fa-sync fa-spin fa-6x d-none"></i>
+                                <br/><br/><i id="LoadingSymbol" class="fas fa-sync fa-spin fa-6x d-none"></i><br/><br/>
+                                <table id="TableAdminLog" class="table table-striped table-bordered table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th>Id</th>
+                                            <th>DateTime</th>
+                                            <th>Initiator</th>
+                                            <th>Description</th>
+                                            <th>Delete</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="TableAdminLogTbody"></tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
