--- a/html/overview.html
+++ b/html/overview.html
@@ -116,6 +116,7 @@
                 </div>
                 <div id="ContentAllianceOverview" class="tab-pane">
                     <div id="GoogleChartColumnAlliance - Offense" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartColumnAlliance - Defense" class="divGoogleChart"></div><br/>
                 </div>
                 <div id="ContentBase" class="tab-pane">
                     <h5 class="text-center"><a href="" target="_blank" id="LinkCncOpt">CnCOpt</a></h5>
@@ -125,6 +126,7 @@
                 </div>
                 <div id="ContentWorldOverview" class="tab-pane">
                     <div id="GoogleChartColumnWorld - Offense" class="divGoogleChart"></div><br/>
+                    <div id="GoogleChartColumnWorld - Defense" class="divGoogleChart"></div><br/>
                 </div>
                 <div id="ContentSettings" class="tab-pane">
                     <div class="row">
