--- a/html/login.html
+++ b/html/login.html
@@ -64,6 +64,90 @@
                         <div class="row">
                             <div class="col-lg">
                                 <h2>Englisch</h2>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">Install script</h4>
+                                        <p class="list-group-item-text">To install the script, all information must be read and accepted. Only by ticking ticking the checkbox (see below) the download will be approved. The basic requirement for installation in both Google Chrome and Firefox is Tampermonkey.</p>
+                                    </div>
+                                </div>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">Get Login</h4>
+                                        <p class="list-group-item-text">As soon as the script is active in a world, the user name and password are displayed in the InGame chat, provided that the account <b>is not</b> substituted and the password has not been changed yet. You can click on the blue link in the InGame-Chat and log in there with this personalized login.</p>
+                                    </div>
+                                </div>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">Automatic transmission</h4>
+                                        <p class="list-group-item-text">Once the script is active, no further activities are necessary. When logging into the world or once per hour, the values are transmitted automatically.</p>
+                                    </div>
+                                </div>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">On which worlds are the values transmitted?</h4>
+                                        <p class="list-group-item-text">Here's a simple answer: by default your datas will be transmitted on all worlds. However, you can tailor the include information to fit your needs.</p>
+                                    </div>
+                                </div>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">Who has access to your account?</h4>
+                                        <p class="list-group-item-text">Only you have access - otherwise the login would be useless, right? : D</p>
+                                    </div>
+                                </div>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">Is this all safe?</h4>
+                                        <p class="list-group-item-text">Roughly speaking: In my opinion yes.<br/>To get to the evaluation of other players / alliances, you have to get access to the database - I wish a lot of success. If you are able to get access, please contact me - I will personally award you a medal.</p>
+                                    </div>
+                                </div>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">Where are the transmitted values stored?</h4>
+                                        <p class="list-group-item-text">The values are stored in a database where only the hoster and I have access - no one else. Theoretically, I can see your transmitted values and spy on your accounts - but honestly, I have better things to do. ;)</p>
+                                    </div>
+                                </div>
+                                <div class="list-group">
+                                    <div class="list-group-item">
+                                        <h4 class="list-group-item-heading">Which values are read?</h4>
+                                        <p class="list-group-item-text">
+                                            <ul><b>Player</b>
+                                                <li>AccountId (for uniquely identify)</li>
+                                                <li>PlayerName</li>
+                                                <li>ScorePoints</li>
+                                                <li>Count Bases</li>
+                                                <li>Count Supports</li>
+                                                <li>Rank</li>
+                                                <li>EventRank (affects VeteranServer)</li>
+                                                <li>Status in Alliance (CiC, Offi, Member, etc.)</li>
+                                                <li>Productions (Tiberium, Crystal, Energy, Credits)</li>
+                                                <li>current ResearchPoints, Credits</li>
+                                                <li>shot PvP- and PvE-Bases</li>
+                                                <li>Veteran- and Legacy-Points (affects VeteranServer)</li>
+                                                <li>CPs (storage and current)</li>
+                                                <li>RepairTime-Storage</li>
+                                                <li>incoming and outgoing substitutions</li>
+                                                <li>Funds</li>
+                                            </ul>
+                                            <ul><b>Bases</b>
+                                                <li>BaseId (for uniquely identify)</li>
+                                                <li>BaseName</li>
+                                                <li>Productions (Tiberium, Crystal, Energy, Credits)</li>
+                                                <li>BaseValues (BaseLevel, DefenseLevel, OffenseLevel, Support-Level und -Art)</li>
+                                                <li>CnC-Opts of Bases</li>
+                                                <li>current RepairTime of base</li>
+                                            </ul>
+                                            <ul><b>Alliance</b>
+                                                <li>AllianceId (for uniquely identify)</li>
+                                                <li>AllianceName</li>
+                                                <li>Rank</li>
+                                                <li>EventRank (affects VeteranServer)</li>
+                                                <li>VeteranPoints (affects VeteranServer)</li>
+                                                <li>VeteranPoints per hour (affects VeteranServer)</li>
+                                                <li>AllianceBoni (Ressources, Procents, Points and Rank)</li>
+                                            </ul>
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col-lg">
                                 <h2>Deutsch</h2>
@@ -76,7 +160,7 @@
                                 <div class="list-group">
                                     <div class="list-group-item">
                                         <h4 class="list-group-item-heading">Login erhalten</h4>
-                                        <p class="list-group-item-text">Sobald das Script auf einer Welt aktiv ist, wird im InGame-Chat Benutzername und Passwort angezeigt, sofern sich der Account <b>nicht</b> in einer UV befindet und das Passwort noch nicht geändert wurde. Man kann auf den blauen Link im InGame-Chat klicken und sich dort mit diesem personalisieren Login kann man sich einloggen.</p>
+                                        <p class="list-group-item-text">Sobald das Script auf einer Welt aktiv ist, wird im InGame-Chat Benutzername und Passwort angezeigt, sofern sich der Account <b>nicht</b> in einer UV befindet und das Passwort noch nicht geändert wurde. Man kann auf den blauen Link im InGame-Chat klicken und sich dort mit diesem personalisierten Login einloggen.</p>
                                     </div>
                                 </div>
                                 <div class="list-group">
@@ -88,7 +172,7 @@
                                 <div class="list-group">
                                     <div class="list-group-item">
                                         <h4 class="list-group-item-heading">Auf welchen Welten werden die Werte übertragen?</h4>
-                                        <p class="list-group-item-text">Hier gibt es eine einfache Antwort: Von Haus aus auf allen. Jedoch könnt ihr die include-Angaben auf eure Wünsche zugeschnitten anpassen.</p>
+                                        <p class="list-group-item-text">Hier gibt es eine einfache Antwort: Standardmäßig werden Ihre Daten auf allen Welten übertragen. Jedoch könnt ihr die include-Angaben auf eure Wünsche zugeschnitten anpassen.</p>
                                     </div>
                                 </div>
                                 <div class="list-group">
@@ -105,7 +189,7 @@
                                 </div>
                                 <div class="list-group">
                                     <div class="list-group-item">
-                                        <h4 class="list-group-item-heading">Wo liegen die übermittelten Werte?</h4>
+                                        <h4 class="list-group-item-heading">Wo werden die übermittelten Werte gespeichert?</h4>
                                         <p class="list-group-item-text">Die Werte sind in einer Datenbank gespeichert, wo ausschließlich der Hoster und ich Zugriff haben - kein anderer. Theoretisch kann ich eure übermittelten Werte sehen und eure Accounts ausspionieren - aber ganz ehrlich: Da habe ich Besseres zu tun. ;)</p>
                                     </div>
                                 </div>
@@ -125,7 +209,7 @@
                                                 <li>Produktionen (Tiberium, Kristall, Strom, Credits)</li>
                                                 <li>aktuelle Forschungspunkte, Credits</li>
                                                 <li>geschossene PvP- und PvE-Basen</li>
-                                                <li>Veteran- und Legaly-Punkte (betrifft Veteranen-Server)</li>
+                                                <li>Veteran- und Legacy-Punkte (betrifft Veteranen-Server)</li>
                                                 <li>KPs (Speicher und aktuell)</li>
                                                 <li>Repzeit-Speicher</li>
                                                 <li>eingehende, ausgehende UV's</li>
